# tool-secret-scrubber-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  pattern.rs  report.rs  scrubber.rs
tests/: integration.rs
